# vinta-schedule-api

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .vinta-ai-workflows.yaml  CALENDAR_WEBHOOK_INTEGRATION_PLAN.md  Dockerfile  Dockerfile.development  Makefile  PLAN_RECURRING_BULK_MODIFICATIONS.md  README.md  RECURRING_BLOCKED_AVAILABLE_TIME_IMPLEMENTATION_PLAN_V2.md  allauth-openapi.yaml  conftest.py  docker-compose.yml  manage.py  minio-cors.json  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  render_build.sh  schema-auth.yml  schema.yml  test_validation_token_security.py
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instruction.md  copilot-instructions.md
accounts/: account_adapters.py  apps.py  base_forms.py  exceptions.py  models.py  notification_contexts.py  serializers.py  signals.py  token_strategies.py  urls.py  views.py
ai-plans/: 2026-06-04-AUTH_TENANT_PROVISIONING_IMPLEMENTATION_PLAN.md  2026-06-04-AUTH_TENANT_PROVISIONING_SPEC.md  2026-06-05-REST_API_FRONTEND_GAPS_IMPLEMENTATION_PLAN.md  2026-06-09-GOOGLE_SA_ROOMS_SYNC_IMPLEMENTATION_PLAN.md  2026-06-13-CALENDAR_SERVICE_REFACTOR_IMPLEMENTATION_PLAN.md  2026-06-13-IN_APP_NOTIFICATIONS_IMPLEMENTATION_PLAN.md  2026-06-13-MULTI_ORG_MEMBERSHIP_IMPLEMENTATION_PLAN.md  2026-06-16-WHITELABEL_API_PROVISIONING_IMPLEMENTATION_PLAN.md  2026-06-17-ORGANIZATION_MEMBER_CREATED_WEBHOOK_IMPLEMENTATION_PLAN.md  2026-06-17-ORGANIZATION_MEMBER_CREATED_WEBHOOK_SPEC.md  2026-06-17-PER_OWNER_SCOPED_PUBLIC_API_TOKENS_IMPLEMENTATION_PLAN.md  2026-06-17-PER_OWNER_SCOPED_PUBLIC_API_TOKENS_SECURITY_REVIEW.md  2026-06-17-PER_OWNER_SCOPED_PUBLIC_API_TOKENS_SPEC.md  2026-06-17-PUBLIC_GRAPHQL_SERVICE_WRAPPERS_IMPLEMENTATION_PLAN.md  2026-06-17-SINGLE_USE_SCHEDULING_CODES_IMPLEMENTATION_PLAN.md  2026-06-17-SINGLE_USE_SCHEDULING_CODES_SPEC.md  2026-06-18-CALENDAR_EVENTS_USER_FILTER_IMPLEMENTATION_PLAN.md  2026-06-18-CALENDAR_OWNERS_GRAPHQL_FIELD_IMPLEMENTATION_PLAN.md  2026-06-18-PER_OWNER_SCOPED_PUBLIC_API_TOKEN_WRITES_IMPLEMENTATION_PLAN.md  2026-06-18-PER_OWNER_SCOPED_PUBLIC_API_TOKEN_WRITES_SECURITY_REVIEW.md  2026-06-18-UNIFORM_ACCEPTS_PUBLIC_SCHEDULING_IMPLEMENTATION_PLAN.md  2026-06-19-AUDIT_TRAIL_IMPLEMENTATION_PLAN.md  2026-06-19-MEMBERSHIP_SCOPED_CALENDAR_REFERENCES_IMPLEMENTATION_PLAN.md  2026-06-20-CALENDAR_EVENT_ICS_EXPORT_IMPLEMENTATION_PLAN.md  2026-06-21-EXTERNAL_EVENT_UPDATE_POLICY_IMPLEMENTATION_PLAN.md  2026-06-22-OWNER_SCOPED_RESCHEDULE_CANCEL_MUTATIONS_IMPLEMENTATION_PLAN.md  2026-06-22-UPDATE_RESOURCE_CALENDAR_IMPLEMENTATION_PLAN.md  2026-06-26-BOOKABLE_SLOTS_SINGLE_CALENDAR_AND_BOOKING_POLICY_IMPLEMENTATION_PLAN.md  2026-06-26-BOOKABLE_SLOTS_SINGLE_CALENDAR_AND_BOOKING_POLICY_SPEC.md  2026-07-03-SMS_MFA_CONSENT_IMPLEMENTATION_PLAN.md  2026-07-04-SMS_MFA_CONSENT_FRONTEND_HANDOFF.md  2026-07-16-PUBLIC_API_DOCS_BACKEND_IMPLEMENTATION_PLAN.md  2026-07-18-BILLING_PLANS_AND_LIMITS_IMPLEMENTATION_PLAN.md  2026-07-18-BILLING_PLANS_AND_LIMITS_SPEC.md  TRACKING_2026-06-17-SINGLE_USE_SCHEDULING_CODES.md  TRACKING_2026-06-22-UPDATE_RESOURCE_CALENDAR.md  TRACKING_AUDIT_TRAIL.md  TRACKING_AUTH_TENANT_PROVISIONING.md  TRACKING_BILLING_PLANS_AND_LIMITS.md  TRACKING_BOOKABLE_SLOTS_SINGLE_CALENDAR_AND_BOOKING_POLICY.md  (+18 more)
ai-tools/: AGENTS.md  prs-context-template.md
audit/: __init__.py  admin.py  constants.py  diff.py  factories.py  models.py  repositories.py  services.py  tasks.py  types.py
calendar_integration/: admin.py  apps.py  constants.py  database_functions.py  exceptions.py  factories.py  filtersets.py  graphql.py  managers.py  models.py  mutations.py  notification_contexts.py  permissions.py  querysets.py  recurrence_utils.py  routes.py  serializers.py  token_urls.py  token_views.py  views.py  virtual_models.py  webhook_parsers.py  webhook_urls.py  webhook_validators.py  webhook_views.py
common/: exception_handlers.py  exceptions.py  fields.py  managers.py  media_storage_backend.py  models.py  openapi.py  raw_sql_migration_managers.py  redis.py  static_storage_backend.py  twilio.py  types.py
dev-plans/: 2026-04-20-CALENDAR_GROUP_PLAN.md
di_core/: apps.py  containers.py
docs/: README.md  building-blocks-integration-v2.md  building-blocks-integration-v3.md  building-blocks-integration.md  glossary.md
infrastructure/: README.md  root.hcl  terragrunt.hcl
legal/: admin.py  apps.py  exceptions.py  factories.py  filtersets.py  managers.py  models.py  querysets.py  routes.py  serializers.py  services.py  views.py
notifications/: apps.py  notification_backends.py  notification_contexts.py  routes.py  serializers.py  views.py
organizations/: admin.py  exceptions.py  filtersets.py  graphql.py  managers.py  models.py  notification_contexts.py  organization_subscription_plan_factory.py  permissions.py  querysets.py  routes.py  serializers.py  services.py  views.py  virtual_models.py
payments/: admin.py  apps.py  billing_constants.py  billing_views.py  constants.py  entitlement_cache.py  exceptions.py  filtersets.py  managers.py  models.py  notification_contexts.py  querysets.py  routes.py  serializers.py  tasks.py  views.py  virtual_models.py
public_api/: apps.py  authentication.py  base_tenant_field.py  capabilities.py  constants.py  converters.py  docs_content.py  exceptions.py  extensions.py  helpers.py  managers.py  middlewares.py  models.py  mutations.py  permissions.py  queries.py  querysets.py  routes.py  schema.py  scoping.py  serializers.py  services.py  types.py  views.py
s3direct_overrides/: apps.py  form_fields.py  form_widgets.py  model_fields.py  models.py  serializer_fields.py  utils.py
scripts/: cors-config.json  init_floci.py  init_localstack.py  init_localstack.sh
templates/: base.html
users/: admin.py  apps.py  factories.py  fixtures.py  graphql.py  models.py  notification_contexts.py  permissions.py  routes.py  serializers.py  tasks.py  views.py  virtual_models.py
vinta_schedule_api/: celery.py  celerybeat_schedule.py  urls.py  wsgi.py
webhooks/: constants.py  exceptions.py  graphql.py  managers.py  (+8 more)
(+557 files in other folders)
