[project]
name = "vinta_schedule_api"
version = "0.1.0"
description = "Django 5, React, Bootstrap 5 with Python 3 and webpack project boilerplate"
authors = [{ name = "Vinta Software", email = "contact@vinta.com.br" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "Django>=6.0,<7",
    "celery>=5.5.2,<6",
    "celery-redbeat>=2.3.2,<3",
    "django-model-utils>=5.0.0,<6",
    "django-import-export>=4.3.7,<5",
    "djangorestframework>=3.16.0,<4",
    "python-decouple-typed>=3.11,<4",
    "psycopg>=3.2.8,<4",
    "brotlipy>=0.7.0,<0.8.0",
    "django-log-request-id>=2.1.0,<3",
    "dj-database-url>=3.1.0,<4",
    "gunicorn>=26.0.0,<27",
    "whitenoise>=6.9.0,<7",
    "ipython>=9.0,<10",
    "sentry-sdk>=2.28.0,<3",
    "setuptools>=82.0.0,<83",
    "django-permissions-policy>=4.26.0,<5",
    "django-csp>=4.0,<5",
    "django-defender>=0.9.8,<0.10.0",
    "django-guid>=3.5.1,<4",
    "drf-spectacular>=0.29.0,<0.30.0",
    "drf-rw-serializers>=1.4.0,<2",
    "django-allauth[socialaccount,mfa]>=65.10.0,<66",
    "pillow>=12.0.0,<13",
    "django-virtual-models>=0.4.0,<0.5.0",
    "django-s3direct>=2.0.3,<3",
    "djangorestframework-simplejwt>=5.5.0,<6",
    "mercadopago>=3.2.0,<4",
    "boto3>=1.38.13,<2",
    "django-storages>=1.14.6,<2",
    "sqlalchemy>=2.0.40,<3",
    "python-git>=2018.2.1,<2019",
    "vintasend>=1.2.0,<2",
    "vintasend-django>=1.2.1,<2",
    "vintasend-celery>=1.2.0,<2",
    "celery-types>=0.26.0,<0.27.0",
    "pytest-xdist[psutil]>=3.6.1,<4",
    "django-filter>=25.1,<26",
    "dependency-injector>=4.47.0,<5",
    "cuid2>=2.0.1,<3",
    "google-api-python-client>=2.172.0,<3",
    "google-auth-httplib2>=0.4.0,<0.5.0",
    "google-auth-oauthlib>=1.2.2,<2",
    "django-fernet-encrypted-fields>=0.4.0,<0.5.0",
    "pyrate-limiter>=4.2.0,<5",
    "redis>=8.0.0,<9",
    "django-cors-headers>=4.7.0,<5",
    "twilio>=9.6.5,<10",
    "strawberry-graphql>=0.316.0,<0.317.0",
    "strawberry-graphql-django>=0.86.0,<0.87.0",
]

[dependency-groups]
dev = [
    "coverage>=7.2.7,<8",
    "model-bakery>=1.12.0,<2",
    "pre-commit>=4.0,<5",
    "ruff>=0.15.0,<0.16.0",
    "mypy>=2.0,<3",
    "django-stubs[compatible-mypy]>=6.0,<7",
    "djangorestframework-stubs[compatible-mypy]>=3.16.0,<4",
    "tblib>=3.1.0,<4",
    "freezegun>=1.5.1,<2",
    "pytest>=9.0,<10",
    "pytest-django>=4.11.1,<5",
    "pytest-cov>=7.0,<8",
    "pytest-timeout>=2.4.0,<3",
    "ipdb>=0.13.13,<0.14.0",
]

[tool.uv]
package = false

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "virtualenvs",
    "**/migrations/**"
]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # flake8-blind-except
    "BLE",
    # flake8-builtins
    "A",
    # flake8-django
    "DJ",
    # isort
    "I",
    # flake8-logging-format
    "G",
    # flake8-no-pep420
    "INP",
    # Ruff-specific rules
    "RUF"
]
ignore = [
  # Disable eradicate (commented code removal)
  "ERA001",
  # Disable Conflicting lint rules,
  # see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E501",
  "E111",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  # Disable unused `noqa` directive
  "RUF100",
]
# Allow unused variables when underscore-prefixed:
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
"django" = ["django"]

[tool.ruff.lint.per-file-ignores]
# Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
# Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
# Ignore "RUF" (Ruff-specific rules) and "I" (isort) in migrations.
"__init__.py" = ["E402", "F403", "F405"]
"**/{tests,docs}/*" = ["E402", "F403", "F405", "S", "N802"]
"**/*test*.py" = ["E402", "F403", "F405", "S", "N802"]
"**/{settings}/*" = ["E402", "F403", "F405"]
"**/migrations/*" = ["RUF", "I"]
# Skill template resources are standalone files copied into projects, not importable packages.
"ai-tools/skills/**/resources/*.py" = ["INP001"]

[tool.coverage.run]
branch = true
omit = [
  "manage.py",
  "conftest.py",
  "**/venv/*",
  "**/env/*",
  "**/virtualenvs/*",
  "**/node_modules/*",
  "**/migrations/*",
  "**/settings/*",
  "**/tests/*",
  "**/factories/*",
  "**/vinta_schedule_api/*"
]

[tool.mypy]
python_version = "3.13"
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
module = ["allauth.*", "googleapiclient.*", "storages.*", "twilio.*", "django_filters.*", "mercadopago.*", "s3direct.*", "encrypted_fields.*", "dateutil.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "vinta_schedule_api.settings.local"
